made sonarqube adjustments